[package]
name = "elgato"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8.2", features = ["v4_10", "v4_6"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
pnet = "0.35.0"
log = "0.4.22"
thiserror = "1.0.61"
anyhow = "1.0.86"
